--- a/assets/css/page.css
+++ b/assets/css/page.css
@@ -13,43 +13,14 @@
   color: #166ab5;
 }
 
-/* Style général du select */
-select {
-  width: 100%;
-  padding: 12px;
-  font-size: 16px;
-  border-radius: 4px;
-  border: 1px solid #ccc;
-  background-color: #fff;
-}
-
-/* Style des options du select */
-select option {
-  padding: 12px;
-}
-
-/* Style du select au survol */
-select:hover {
-  border-color: #aaa;
-}
-
-/* Style du select lorsqu'il est activé */
-select:focus {
-  border-color: #555;
-  box-shadow: 0 0 8px 0 rgba(85, 85, 85, 0.3);
-  outline: none;
-}
-
-/* Style du select lorsqu'il est désactivé ou en lecture seule */
-select:disabled {
-  opacity: 0.6;
-  cursor: not-allowed;
-}
-
 .col-lg-4 {
   flex: 0 0 auto;
-  width: 14.333333%;
   margin: auto;
+}
+
+.appointment .php-email-form input, .appointment .php-email-form select {
+  height: 47px;
+  width: 337px;
 }
 
 body {
