--- a/assets/css/page.css
+++ b/assets/css/page.css
@@ -477,7 +477,7 @@ h6 {
 #hero {
   width: 100%;
   height: 90vh;
-  background: url("../img/fond.jpg") top center;
+  background: url("../img/4.jpg") top center;
   background-size: cover;
   margin-bottom: -200px;
 }
